--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@types/react-dom": "18.3.1",
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "next": "15.0.3",
+    "prettier": "^3.3.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.6.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
